--- a/templates/k8s.yaml/kustomize/base/kustomization.yaml
+++ b/templates/k8s.yaml/kustomize/base/kustomization.yaml
@@ -1,6 +1,6 @@
 # Kustomize is a kubernetes tool for managing yaml manifests.
 # 
-# This folder serves as a base for int and prod and is referenced in
+# This folder serves as a base for int and prod and is referenced
 # in the kustomization.yaml files in respective folders.
 # 
 # see https://github.com/kubernetes-sigs/kustomize for more info.
@@ -9,3 +9,5 @@ commonLabels:
   app: {{name}}
 resources:
 - deployment.yaml
+- service.yaml
+- networkpolicy.yaml
