--- a/templates/k8s.yaml/go-templates/ingress.yaml
+++ b/templates/k8s.yaml/go-templates/ingress.yaml
@@ -1,15 +1,3 @@
-apiVersion: v1
-kind: Service
-metadata:
-  name: {{name}}
-spec:
-  selector:
-    app: {{name}}
-  ports:
-  - port: 80
-    targetPort: 80
-
----
 
 apiVersion: extensions/v1beta1
 kind: Ingress
@@ -22,7 +10,6 @@ metadata:
     kubernetes.io/ingress.class: nginx
     kubernetes.io/ingress.allow-http: "false"
     ingress.kubernetes.io/force-ssl-redirect: "true"
-    nginx.ingress.kubernetes.io/service-upstream: "true"
 spec:
   rules:
   - host: {{name}}.int.fareonline.net
@@ -34,21 +21,5 @@ spec:
           servicePort: 80
   tls:
   - hosts:
-    - {{name}}.int.fareonline.net
+    - {{name}}.\{{ .Env.CLUSTER }}.fareonline.net
     secretName: {{name}}-tls
-
----
-
-apiVersion: networking.k8s.io/v1
-kind: NetworkPolicy
-metadata:
-  name: {{name}}
-spec:
-  podSelector:
-    matchLabels:
-      app: {{name}}
-  ingress:
-  - from:
-    - namespaceSelector:
-        matchLabels:
-          name: ingress-nginx
