--- a/templates/k8s.yaml/kustomize/prod/ingress.yaml
+++ b/templates/k8s.yaml/kustomize/prod/ingress.yaml
@@ -1,6 +1,3 @@
-
----
-
 apiVersion: extensions/v1beta1
 kind: Ingress
 metadata:
@@ -12,10 +9,9 @@ metadata:
     kubernetes.io/ingress.class: nginx
     kubernetes.io/ingress.allow-http: "false"
     ingress.kubernetes.io/force-ssl-redirect: "true"
-    nginx.ingress.kubernetes.io/service-upstream: "true"
 spec:
   rules:
-  - host: {{name}}.int.fareonline.net
+  - host: {{name}}.prod.fareonline.net
     http:
       paths:
       - path: "/"
@@ -24,21 +20,5 @@ spec:
           servicePort: 80
   tls:
   - hosts:
-    - {{name}}.int.fareonline.net
+    - {{name}}.prod.fareonline.net
     secretName: {{name}}-tls
-
----
-
-apiVersion: networking.k8s.io/v1
-kind: NetworkPolicy
-metadata:
-  name: {{name}}
-spec:
-  podSelector:
-    matchLabels:
-      app: {{name}}
-  ingress:
-  - from:
-    - namespaceSelector:
-        matchLabels:
-          name: ingress-nginx
