--- a/templates/k8s.yaml/kustomize/prod/kustomization.yaml
+++ b/templates/k8s.yaml/kustomize/prod/kustomization.yaml
@@ -1,12 +1,12 @@
 # Kustomize is a kubernetes tool for managing yaml manifests.
 # 
-# int deployment config goes in this folder.
+# prod deployment config goes in this folder.
 # 
 # see https://github.com/kubernetes-sigs/kustomize for more info.
 bases:
 - ../base
 resources:
-- network.yaml
+- ingress.yaml
 configMapGenerator:
 - files:
   - defaults.env
