--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "handlebars": "^4.1.0",
     "js-yaml": "^3.12.1",
     "jsonschema": "^1.2.4",
+    "lodash": "^4.17.11",
     "meow": "^5.0.0",
-    "readline-sync": "^1.4.9"
+    "parse-github-url": "^1.0.2",
+    "shelljs": "^0.8.3"
   }
 }
