--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "infra-cli",
+  "name": "rig",
   "version": "1.0.0",
   "main": "lib/index.js",
-  "bin": "bin/cli",
-  "repository": "git@github.com:fareoffice/infra-cli.git",
+  "bin": "bin/rig",
+  "repository": "git@github.com:fareoffice/rig.git",
   "dependencies": {
     "fs-extra": "^7.0.1",
     "glob": "^7.1.3",
