--- a/package.json
+++ b/package.json
@@ -13,6 +13,6 @@
     "lodash": "^4.17.11",
     "meow": "^5.0.0",
     "parse-github-url": "^1.0.2",
-    "shelljs": "^0.8.3"
+    "tmp": "^0.0.33"
   }
 }
